--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -5,7 +5,7 @@
 <body>
 
     <hr/>
-    <h1>Clients <a href="/clients/csv">csv</a>-<a>xlsx</a>-<a>json</a>-<a>xml</a>-<a>pdf</a></h1>
+    <h1>Clients <a href="/clients/csv">csv</a>-<a href="/clients/xlsx">xlsx</a>-<a>json</a>-<a>xml</a>-<a>pdf</a></h1>
     <hr/>
 
     {{>clients}}
@@ -17,7 +17,7 @@
 
     {{#factures}}
 
-        <h2>Facture numéro {{id}} de {{client.nom}} {{client.prenom}} <a href="/factures/{{id}}/pdf">pdf</a></h2>
+        <h2>Factures de {{client.nom}} {{client.prenom}} <a href="/factures/{{id}}/pdf">pdf</a>/<a href="/factures/{{id}}/xlsx">xlsx</a></h2>
         {{>factures}}
     {{/factures}}
 </body>
